--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -13,3 +13,10 @@ h1{
   text-align: center;
   margin-bottom: 2rem;
 }
+
+body {
+  background-image: url("../views/image/background.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed
+}
