--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -8,17 +8,49 @@ html{
   font-size: 62.5%;
 }
 
+body {
+  background-image: url("../assets/image/background.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed
+}
+
 h1{
   font-size: 3rem;
   text-align: center;
   margin-bottom: 2rem;
 }
 
-body {
-  background-image: url("../views/image/background.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed
+p{
+  color: black;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+a{
+  color: #90c4d9;
+  font-size: 1.6rem;
+  font-weight: 60rem;
+  text-decoration: none;
+  transition: all .3s ease-out;
+}
+
+a:hover{
+  color: #003a90;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 10rem;
+}
+
+.card{
+  padding: 3rem;
+  border-radius: 5%;
+  box-shadow: 0.4rem 0.4rem 0.1rem 0rem #00000060;
+  width: 40rem;
 }
 
 .frame {
