--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -53,6 +53,57 @@ a:hover{
   width: 40rem;
 }
 
+.label-float{
+  font-size: 2rem;
+  position: relative;
+  padding-top: 2rem;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.label-float input{
+  width: 100%;
+  padding: 0.5rem 0.5rem;
+  display: inline-block;
+  border: 0;
+  border-bottom: 0.2rem solid #0d009c;
+  background-color: transparent;
+  outline: none;
+  min-width: 18rem;
+  transition: all .3s ease-out;
+  border-radius: 0;
+  font-size: 1.5rem;
+}
+
+
+.label-float label {
+  font-size: 2rem;
+  position: static;
+  margin-top: 1.2rem; 
+  top: 1.1rem;
+  left: 0;
+  pointer-events: none;
+  color: #427D9C;
+  transition: all .3s ease-out;
+}
+
+.label-float input:focus + label,
+.label-float input:valid + label {
+  font-size: 1.3rem;
+  top: 0;
+  color: #4038a0;
+}
+
+
+
+.label-float input:focus + label,
+.label-float input:valid + label{
+  font-size: 1.3rem;
+  margin-top: 0;
+  color: #4038a0
+}
+
+
 .frame {
   width: 90%;
   margin: 4rem auto;
