Adicionado novas classes css dentro do html

--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   
-  <div>
-    <div>
+  <div class="container">
+    <div class="card">
 
       <h1> FAÇA SEU LOGIN </h1>
 
       <!-- Campo Usuário -->
-      <div>
+      <div class="label-float">
 
         <label id="userLabel" for="user">Usuário</label>
         <input type="text" id="user" placeholder="Seu usuário cadastrado" required>
@@ -22,7 +22,7 @@
       </div>
 
       <!-- Campo E-mail -->
-      <div>
+      <div class="label-float">
 
         <label id="emailLabel" for="email">E-mail</label>
         <input type="emailLabel" id="email" placeholder="Seu email cadastrado" required>
@@ -30,7 +30,7 @@
       </div>
 
       <!-- Campo Senha -->
-      <div>
+      <div class="label-float">
 
         <label id="senhaLabel" for="senha">Senha</label>
         <input type="password" id="senha" placeholder="Senha do usuário cadastrado" required>
