--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -34,7 +34,7 @@
 
         <label id="senhaLabel" for="senha">Senha</label>
         <input type="password" id="senha" placeholder="Senha do usuário cadastrado" required>
-        <i aria-hidden="true"></i>
+        <i class="fa fa-eye fa-eye-slash" aria-hidden="true" id="verSenha"></i>
 
       </div>
       
