Criação botão logout

--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -9,6 +9,12 @@
 </head>
 <body>
   
+  <div class="justify-center wrap">
+
+    <button class="btn custom-btn btn-logout" onclick="entrar()"><span>Logout</span></button>
+
+  </div>
+
   <div class="container">
     <div class="card">
 
@@ -40,15 +46,21 @@
       </div>
       
       <div class="justify-center wrap">
-        <button class="btn custom-btn" onclick="entrar()"><span>Logar</span></button>
+
+        <button class="btn custom-btn" onclick="entrar()"><span>Login</span></button>
+
       </div>
 
+      
       <p>Não tem Cadastro?
         <a href=""> Cadastre-se</a>
       </p>
-
+      
     </div>
-  </div>
+    
+    
+  
+    </div>
 
 <script src=""></script>
 </body>
