Renomeado função do botão logout

--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -11,7 +11,7 @@
   
   <div class="justify-center wrap">
 
-    <button class="btn custom-btn btn-logout" onclick="entrar()"><span>Logout</span></button>
+    <button class="btn custom-btn btn-logout" onclick="sair()"><span>Logout</span></button>
 
   </div>
 
