--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -286,3 +286,12 @@ button {
   display: flex;
   justify-content: center;
 }
+
+#msgError{
+  text-align: center;
+  color: #ff0000;
+  background-color: #ffbbbb;
+  padding: 1rem;
+  border-radius: 0.4rem;
+  display: none;
+}
