--- a/frontend/views/CriarEquipe.html
+++ b/frontend/views/CriarEquipe.html
@@ -30,11 +30,14 @@
       </div>
 
       <div class="justify-center wrap">
-        <button class="btn custom-btn" type="submit"><span>Criar</span></button>
+        <button class="btn custom-btn" type="submit">
+          <span>Criar</span>
+        </button>
       </div>
     </form>
   </div>
 
-  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="/frontend/scripts/CriarEquipe.js"></script>
 </body>
 </html>
