--- a/frontend/views/cadastro.html
+++ b/frontend/views/cadastro.html
@@ -10,45 +10,61 @@
     </head>
 </head>
 <body>
+    
     <div class='container'>
         <div class='card'>
+
             <h1>Cadastre-se</h1>
             
             <div id='msgError'></div>
             <div id='msgSuccess'></div>
             
             <div class="label-float">
-                <input type="text" id="nome" placeholder=" " required>
+
+                <input type="text" id="nome" required>
                 <label id="labelNome" for="nome">Nome Completo</label>
+
             </div>
             
             <div class="label-float">
-                <input type="email" id="email" placeholder=" " required>
+
+                <input type="email" id="email" required>
                 <label id="labelEmail" for="email">E-mail</label>
+
             </div>
             
             <div class="label-float">
-                <input type="password" id="senha" placeholder=" " required>
+
+                <input type="password" id="senha" required>
                 <label id="labelSenha" for="senha">Senha</label>
-                <i id="verSenha" class="fa fa-eye" aria-hidden="true"></i>
+                <i id="verSenha" class="fa fa-eye fa-eye-slash" aria-hidden="true"></i>
+
             </div>
             
             <div class="label-float">
-                <input type="password" id="confirmSenha" placeholder=" " required>
+
+                <input type="password" id="confirmSenha" required>
                 <label id="labelConfirmSenha" for="confirmSenha">Confirmar Senha</label>
-                <i id="verConfirmSenha" class="fa fa-eye" aria-hidden="true"></i>
+                <i id="verConfirmSenha" class="fa fa-eye fa-eye-slash" aria-hidden="true"></i>
+
             </div>
             
             <div class='justify-center'>
-                <button class="custom-btn" onclick="cadastrar()">Cadastrar</button>
+
+                <button onclick="cadastrar()">Cadastrar</button>
+
             </div>
             
             <br>
-            <p>Já tem cadastro?
-                <a href="../views/login.html">Login</a>
+
+            <p class="justify-center">Já tem cadastro? 
+                <a href="../views/login.html">      Login</a>
             </p>
+
         </div>
     </div>
+
     <script src="../scripts/cadastro.js"></script>
+
 </body>
 </html>
