--- a/frontend/views/confirmado.html
+++ b/frontend/views/confirmado.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-mail Confirmado</title>
   <link rel="stylesheet" href="../styles/confirmado.css">
+  <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
+</head>
 </head>
 <body>
   <div class="container">
