--- a/frontend/styles/confirmado.css
+++ b/frontend/styles/confirmado.css
@@ -3,10 +3,13 @@ html {
   }
   
   body {
+    background-image: url(../assets/img/background.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f3f4f6;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,7 +42,7 @@ html {
   }
   
   button {
-    background-color: #4f36bd;
+    background-color: #4e50e7;
     color: #ffffff;
     border: none;
     padding: 0.625rem 1.25rem; /* 0.625rem = 10px, 1.25rem = 20px */
@@ -50,6 +53,6 @@ html {
   }
   
   button:hover {
-    background-color: #3929c7;
+    background-color: #4e50e7;
   }
       
