--- a/frontend/styles/confirmado.css
+++ b/frontend/styles/confirmado.css
@@ -1,5 +1,11 @@
-html {
-    font-size: 16px; /* Define 1rem como 16px (padrão comum para navegadores) */
+  * {
+  font-family: "PT Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  }
+
+  html {
+    font-size: 100%;
   }
   
   body {
@@ -7,9 +13,6 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,7 +33,7 @@ html {
   }
   
   .message-box h1 {
-    color: #4e50e7;
+    color: #080052;
     margin-bottom: 0.625rem; /* 0.625rem = 10px */
     font-size: 1.5rem; /* 1.5rem = 24px */
   }
@@ -42,7 +45,7 @@ html {
   }
   
   button {
-    background-color: #4e50e7;
+    background-color: #080052;
     color: #ffffff;
     border: none;
     padding: 0.625rem 1.25rem; /* 0.625rem = 10px, 1.25rem = 20px */
@@ -53,6 +56,6 @@ html {
   }
   
   button:hover {
-    background-color: #4e50e7;
+    background-color: #40378a;
   }
       
