--- a/frontend/styles/tarefas.css
+++ b/frontend/styles/tarefas.css
@@ -1,4 +1,3 @@
-/* Estilo geral */
 * {
   font-family: "PT Sans", sans-serif;
   margin: 0;
@@ -9,39 +8,38 @@ html{
   font-size: 100%;
 }
 
-/* Estilo geral */
-/* Estilo geral */
-/* Estilo geral */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  font-size: 1rem; /* Base para rem */
-  background-image: url('../assets/img/background.svg'); /* Substitua 'background.jpg' pelo caminho da imagem */
-  background-size: cover; /* A imagem cobre toda a tela */
-  background-attachment: fixed; /* Mantém a imagem fixa no scroll */
-  color: #ffffff; /* Texto branco para contraste */
+  font-size: 1rem; 
+  background-image: url('../assets/img/background.svg'); 
+  background-size: cover;
+  background-attachment: fixed; 
+  color: #ffffff;
 }
 
-/* Cabeçalho */
+/* titulo */
 .header {
   display: flex;
-  justify-content: space-between; /* Alinha título à esquerda e o botão à direita */
+  justify-content: center;
   align-items: center;
-  padding: 1rem 2rem; /* Aumenta o padding lateral para afastar da borda */
+  padding: 1rem 2rem; 
   position: relative;
   z-index: 10;
 }
 
 .header h1 {
-  margin: 0;
-  font-size: 2rem;
-  color: #a13232;
-  text-align: left; /* Garante que o título está alinhado à esquerda */
-  flex: 1; /* Faz com que o título ocupe o espaço disponível */
+  margin: 2rem;
+  font-size: 3rem; 
+  color: #ffffff;
+  text-align: left; 
+  font-weight: bold;
+  text-transform: uppercase; 
+  letter-spacing: 0.2rem; 
+  text-shadow: 2px 2px 10px rgb(0, 0, 0);   
 }
 
-/* Botão de alternância no canto inferior direito */
 .header button {
   background-color: #ffffff;
   color: #0078d7;
@@ -52,8 +50,8 @@ body {
   border-radius: 0.5rem;
   transition: background-color 0.3s;
   position: fixed;
-  bottom: 1rem; /* Posiciona no fundo */
-  right: 1rem; /* Posiciona à direita */
+  bottom: 1rem;
+  right: 1rem; 
   z-index: 5;
 }
 
@@ -61,12 +59,12 @@ body {
   background-color: #e6f7ff;
 }
 
-/* Painel */
+/* painel */
 .board {
   display: flex;
   gap: 1rem;
   padding: 1rem;
-  margin-top: 4rem; /* Deixa um espaço acima do painel para o título */
+  margin-top: 3rem;
   max-width: 80rem;
   z-index: 1;
 }
@@ -81,17 +79,17 @@ body {
 
 .kanban-column {
   flex: 1;
-  background: rgba(255, 255, 255, 0.9); /* Fundo semitransparente */
+  background: rgba(255, 255, 255, 0.9);
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  overflow: hidden; /* Para garantir que o conteúdo não exceda */
+  overflow: hidden;
 }
 
 .kanban-column h3 {
   font-size: 1.2rem;
   margin-bottom: 1rem;
-  color: #333333; /* Texto escuro no fundo claro */
+  color: #333333;
 }
 
 .task-list {
@@ -100,7 +98,7 @@ body {
   gap: 1rem;
 }
 
-/* Estilo das tarefas */
+/* tarefas */
 .task {
   background-color: #0078d7;
   color: #ffffff;
