--- a/frontend/views/principal.html
+++ b/frontend/views/principal.html
@@ -16,10 +16,10 @@
       <h1>Minhas Equipes</h1>
       <h2 class="justify-center">Equipes</h2>
       <ul id="teams"></ul>
-      <div class="justify-center">
+      <div class="justify-evenly">
 
         <button id="add-team-btn">Adicionar Nova Equipe</button>
-    
+        <button id="logout-btn" onclick="setupLogoutButton()">Logout</button>
       </div>
     
     </div>
@@ -28,5 +28,6 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="/frontend/scripts/logout.js"></script>
   <script src="/frontend/scripts/principal.js"></script>
+
 </body>
 </html>
