--- a/frontend/views/CriarEquipe.html
+++ b/frontend/views/CriarEquipe.html
@@ -36,6 +36,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="script.js"></script>
+  <script src="/frontend/scripts/CriarEquipe.js"></script>
 </body>
 </html>
