--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -13,24 +13,23 @@
 			<h1> Login </h1>
 
 			<div class="label-float" name="email">
-
 				<label id="emailLabel" for="email">E-mail</label>
 				<input type="emailLabel" id="email" placeholder="Seu email cadastrado" required>
-
 			</div>
 
 			<div class="label-float" name="senha">
-
 				<label id="senhaLabel" for="senha">Senha</label>
 				<input type="password" id="senha" placeholder="Senha do usuário cadastrado" required>
 				<i class="fa fa-eye fa-eye-slash" aria-hidden="true" id="verSenha"></i>
+			</div>
 
+			<div>
+				<input type="checkbox" name="lembre" id="lembre">
+				<label for="lembre" id="lembre2">Lembre-me</label>
 			</div>
 
 			<div class="justify-center wrap" name="botão">
-
 				<button class="btn custom-btn" type="submit"><span>Login</span></button>
-
 			</div>
 
 			<p>
