--- a/frontend/styles/tarefas.css
+++ b/frontend/styles/tarefas.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1rem; 
-  background-image: url('../assets/img/background.svg'); 
+  background-image: url('../assets/image/background3.svg'); 
   background-size: cover;
   background-attachment: fixed; 
   color: #ffffff;
